<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/medicine_item_in_medicine_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/medicine_info_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:orientation="vertical">

        <TextView
            android:id="@+id/medicine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/medicine_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="@+id/take_time_tv" />

        <TextView
            android:id="@+id/regularity_and_take_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regularity"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/take_time_tv" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/was_taken_info_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/medicine_info_ll"
        app:layout_constraintTop_toTopOf="@id/medicine_info_ll">

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:src="@drawable/baseline_delete_24" />

        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:src="@drawable/baseline_edit_24" />
    </LinearLayout>

</LinearLayout>