<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/fullnameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/username_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:selectAllOnFocus="true">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_white"
                android:drawableEnd="@drawable/ic_user"
                android:singleLine="true"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_white"
                android:drawableEnd="@drawable/ic_password"
                android:inputType="textPassword"
                tools:targetApi="jelly_bean"
                android:autofillHints="username"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="92dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_button"
            android:backgroundTintMode="multiply"
            android:text="@string/login"
            app:iconTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            tools:targetApi="jelly_bean" />

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"
            android:text="@string/register"
            android:textColor="?attr/colorPrimary"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />

    </androidx.constraintlayout.widget.ConstraintLayout>
<!--    <EditText-->
<!--        android:id="@+id/username"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="96dp"-->
<!--        android:hint="@string/prompt_email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:hint="@string/prompt_password"-->
<!--        android:imeActionLabel="@string/action_sign_in_short"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:inputType="textPassword"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/username" />-->

<!--    <Button-->
<!--        android:id="@+id/login"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="start"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="64dp"-->
<!--        android:enabled="false"-->
<!--        android:text="@string/action_sign_in"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
<!--        app:layout_constraintVertical_bias="0.2" />-->

</androidx.constraintlayout.widget.ConstraintLayout>